<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F0F0F0">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/linearLayout"
        android:background="@drawable/header_back1"
        android:orientation="vertical"
        android:gravity="bottom"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:elevation="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/profle_pic"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hanna_montannah"
            android:textStyle="bold"
            android:textColor="#FFF"
            android:paddingTop="8dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:id="@+id/myBlog_TextView"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/my_blog"
                       android:paddingStart="16dp"
                       android:paddingEnd="0dp"
                       android:layout_gravity="center_vertical"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/my_blogs"
                       android:textSize="16sp"
                       android:textColor="@color/colorPrimary"
                       android:textStyle="bold"
                       android:paddingTop="16dp"
                       android:paddingStart="16dp"
                       android:paddingEnd="16dp"
                       android:paddingBottom="16dp" />

               </LinearLayout>




           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:id="@+id/likedBlog_TextView"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/heart_liked"
                       android:paddingStart="16dp"
                       android:paddingEnd="0dp"
                       android:layout_gravity="center_vertical"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"

                       android:text="Liked blogs"
                       android:textSize="16sp"
                       android:textColor="@color/colorPrimary"
                       android:textStyle="bold"
                       android:paddingTop="16dp"
                       android:paddingStart="16dp"
                       android:paddingEnd="16dp"
                       android:paddingBottom="16dp" />

               </LinearLayout>




           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/category_icon"
                       android:paddingStart="16dp"
                       android:paddingEnd="0dp"
                       android:layout_gravity="center_vertical"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:id="@+id/category_TextView"
                       android:text="@string/categories"
                       android:textSize="16sp"
                       android:textColor="@color/colorPrimary"
                       android:textStyle="bold"
                       android:paddingTop="16dp"
                       android:paddingStart="16dp"
                       android:paddingEnd="16dp"
                       android:paddingBottom="16dp" />

               </LinearLayout>




           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/personalTextView"
                   android:text="@string/personal"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/professionalTextView"
                   android:text="@string/professional"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/businessTextView"
                   android:text="@string/business"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/sportsTextView"
                   android:text="@string/sports"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/photographyTextView"
                   android:text="@string/photography"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/travelTextView"
                   android:text="@string/travel"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/foodTextView"
                   android:text="@string/food"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/lifeStyleTextView"
                   android:text="@string/life_style"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/humorTextView"
                   android:text="@string/humor"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp"
               android:layout_margin="1dp">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/beautyTextView"
                   android:text="@string/beauty"
                   android:textSize="16sp"
                   android:paddingTop="8dp"
                   android:paddingStart="54dp"
                   android:paddingEnd="14dp"
                   android:paddingBottom="8dp"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true"/>

           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:id="@+id/settings_TextView"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/setting_icon"
                       android:paddingStart="16dp"
                       android:paddingEnd="0dp"
                       android:layout_gravity="center_vertical"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"

                       android:text="@string/settings"
                       android:textSize="16sp"
                       android:textColor="@color/colorPrimary"
                       android:textStyle="bold"
                       android:paddingTop="16dp"
                       android:paddingStart="16dp"
                       android:paddingEnd="16dp"
                       android:paddingBottom="16dp" />

               </LinearLayout>




           </android.support.v7.widget.CardView>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:elevation="4dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:id="@+id/help_TextView"
                   android:background="?attr/selectableItemBackground"
                   android:clickable="true"
                   android:focusable="true">

                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:src="@drawable/help_and_feedback_icon"
                       android:paddingStart="16dp"
                       android:paddingEnd="0dp"
                       android:layout_gravity="center_vertical"/>

                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"

                       android:text="@string/help_feedback"
                       android:textSize="16sp"
                       android:textColor="@color/colorPrimary"
                       android:textStyle="bold"
                       android:paddingTop="16dp"
                       android:paddingStart="16dp"
                       android:paddingEnd="16dp"
                       android:paddingBottom="16dp" />

               </LinearLayout>


           </android.support.v7.widget.CardView>


       </LinearLayout>

    </ScrollView>

</LinearLayout>